--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,247 @@
+
+/* w3schools Reference
+ * Copyright 2024 @ Wisful Alfaris Authors
+ * Mini Coding Project
+ * RevoU Software Engineering Fundamental Course - 28 Okt
+ * Link (https://github.com/wisful)
+ */
+/*Test MiniCoding CSS3 */
+
 main {
     display: flex;
     justify-content: space-around;
 }
 
-input[type=number]{
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid#ccc ;
-    border-radius: 4px;
-    box-sizing: border-box;
+.title {
+  font-size: 25px;
+  margin: 10px 0;
 }
 
-button {
-    border: 0;
-    background-color: aquamarine;
-    padding: 8px;
-    border-radius: 8px;
-}
-.color-section {
-    background-color: aliceblue;
-    padding: 12px;
-    border-radius: 8px;
+.sub-title {
+  font-size: 20px;
 }
 
+.home-paragraph {
+  text-align: justify;
+  line-height: 20px;
+  color: #1f1e1e;
+  font-family: verdana;
+}
+
+.result-paragraph {
+  text-align: justify;
+  line-height: 20px;
+  color: #1f1e1e;
+  font-family: verdana;
+}
+
+.paragraph {
+  text-align: justify;
+  line-height: 30px;
+  color: #1f1e1e;
+  font-family: verdana;
+}
+
+.paragraph sup {
+  font-size: 13px;
+}
+
+/* .mb-1 {
+  margin-bottom: 30px;
+} */
+
+.btn {
+  border: none;
+  font-size: 15px;
+  border-radius: 5px;
+  padding: 10px 15px;
+  background-color:  rgb(216, 154, 21);
+  color: rgb(12, 2, 39);
+  font-weight: 500;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color .3s ease-in-out;
+}
+
+.btn:hover {
+  background-color:  rgb(180, 128, 16);
+}
+
+.btn-reset {
+  background-color: rgb(155, 4, 4);
+  border: 1px solid rgb(107, 2, 2);
+  color: white;
+}
+
+.btn-reset:hover {
+  background-color: rgb(192, 48, 48);
+}
+
+.pesan-error {
+  color: #efff10;
+  font-size: 18px;
+  margin-top: 5px;
+  font-weight: bold;
+}
+
+
+/* start-Home & Form */
+
+.container {
+  margin: 30px 5%;
+}
+
+.form {
+  background-color: #064a77cd;
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 10px 0;
+}
+
+.form .labeltulisan {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+}
+
+.form .form-input {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: black;
+  background-color: white;
+  background-clip: padding-box;
+  border: 1px solid #6a9cbdcd;
+  appearance: none;
+}
+
+.form .input-group {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  width: 100%;
+}
+
+.form .input-group > .form-input {
+  position: relative;
+  flex: 1 1 auto;
+  width: 1%;
+  min-width: 0;
+}
+
+.icon-gambar {
+  width:20px;
+  height:20px;
+  padding: 0.375rem 0.75rem;
+  border-radius: 5px 0 0 5px;
+}
+
+.form .input-group-icon {
+  display: flex;
+  align-items: center;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: white;
+  text-align: center;
+  white-space: nowrap;
+  border: 1px solid;
+}
+
+.form .input-group-desc {
+  background-color: rgb(216, 154, 21);
+  border-color: rgb(216, 154, 21);
+  border-radius: 0 5px 5px 0;
+}
+
+.form .input-group-icon {
+  background-color: #6a9cbdcd;
+  border-color: #6a9cbdcd;
+  border-radius: 5px 0 0 5px;
+}
+
+.fitur {
+  margin-left: 20px;
+  line-height: 30px;
+  font-family: verdana;
+  color: #1f1e1e;
+}
+
+/* Start-Result*/
+.sub-container {
+  background-color: #6a9cbdcd;
+  padding: 20px 0;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.result-title {
+  font-size: 18px;
+}
+
+.result-bmi {
+  font-size: 40px;
+}
+
+.result-desc {
+  margin: 10px 0 20px;
+  font-size: 15px;
+}
+
+.btnlink {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin: 10px 0;
+}
+
+.btnlink button {
+  font-size: 15px;
+}
+
+.judul-resiko {
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.list-risk {
+  list-style: none;
+  text-align: center;
+}
+
+.unduh_aplikasi {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px 0;
+}
+
+.icon_unduh_aplikasi {
+  width: 300px;
+  width: 100px;
+  cursor: pointer;
+  border-radius: 8px;
+}
+/* End-Result */
+
+/* Start Footer */
 footer {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: aquamarine;
-    color: rgb(11, 8, 94);
+    background-color: #6a9cbdcd;
+    color: rgb(0, 0, 0);
     text-align: center;
+    
 }
+/* End-Footer */
